syntax = "proto3";

option go_package = "./;pb";

// designed to be shared between all app protocols
message Messagedata {
    // shared between all requests
    int64 timestamp = 1;     // unix time
    string id = 2;           // allows requesters to use request data when processing a response
}

//// Tag protocol

// a protocol define a set of reuqest and responses
message TagRequest {
    Messagedata MessageData = 1;
    string FileName   = 2;
    string CustomData = 3;
    int64  BlockNum   = 4;
}
message TagResponse {
    Messagedata MessageData = 1;
    // Code indicates the result of this transfer
    uint32 Code = 2;
}